--- a/less/estilos.less
+++ b/less/estilos.less
@@ -10,7 +10,11 @@ nav, article, aside, section, main, menu, footer, figure, div{
 .active{
 	background: darken(@bg-menu, 2%);
 	border-radius: 3px; 
+	> a{
+		color: white !important;
+	}
 }
+
 /*Estilos para el contenedor del logo*/
 .contenedor-ico{
 	display: inline-block;
@@ -39,6 +43,7 @@ nav, article, aside, section, main, menu, footer, figure, div{
 }
 /*Estilos para el main-menu y sus hijos*/
 .main-menu{
+	display: inline-block;
 	float: right;
 	vertical-align: top;
 	.menu{
@@ -49,6 +54,7 @@ nav, article, aside, section, main, menu, footer, figure, div{
 			display:inline-block;
 			a{
 				border-top: 4px solid transparent;
+				color: #1F1F1F;
 				display: block;
 				text-align: center;
 				padding: 10px 20px;
@@ -81,27 +87,16 @@ nav, article, aside, section, main, menu, footer, figure, div{
 }
 @media (max-width: 767px){
 
-body{
-	background: tomato; 
-}
 	/*Contenedor menú*/
 	.contenedor-menu{
 		position: relative;
 		background: @bg-menu;
-		padding-top: 10px;
-		padding-bottom: 10px;
+		padding-top: 0;
+		padding-bottom: 0;
 	}
 	.contenedor-ico{
 		display: block;
 		height: 45px;
-		&:before,
-	    &:after {
-	      content: " "; // 1
-	      display: table; // 2
-	    }
-	    &:after {
-	      clear: both;
-	    }
 	}
 	.figure-logo{
 		display: block;
@@ -116,6 +111,12 @@ body{
 			}
 		}
 	}
+	.hide-logo{
+		display: none !important;
+	}
+	.height-contenedor-ico{
+		height: 40px !important;
+	}
 	.ico-menu{
 		background: white;
 		border-radius: 3px;
@@ -129,14 +130,20 @@ body{
 	}
 	/*Estilos para el main-menu y sus hijos*/
 	.main-menu{
-		vertical-align: top;
+		border-top: thin solid #E1E1E1;
+		display: none;
+		padding-top: 6.5px;
+		margin-top: 6.5px;
+		margin-left: -15px;
+		margin-right: -15px;
+		float: none;
 		.menu{
+			display: block;
 			list-style-type: none;
-			padding: 0;
-			margin: 0;
 			text-align: center;
+			margin-left: 15px;
+			margin-right: 15px;
 			li{
-				display:inline-block;
 				margin-top: 3px;
 				a{
 					border-top: 4px solid transparent;
@@ -155,6 +162,7 @@ body{
 	/*fin*/
 	.ico-menu-left{
 		display: block;
+		height: 45px;
 		.figure-logo{
 			float: right;
 		}
@@ -164,13 +172,11 @@ body{
 	}
 	.ico-menu-center{
 		display: block;
-		height: 95px;
+		height: 45px * 2;
 		width: 100%;
 		.contenedor-logo{
 			background: transparent;
 			display: block;
-			margin-top: 45px;
-			min-height: 45px;
 			width: 100%;
 			.figure-logo{
 				display: block;
@@ -179,17 +185,39 @@ body{
 			}
 		}
 		.ico-menu{
-			position: absolute;
-			top: 5px;
-			bottom: 5px;
-			left: 50%;
-			margin-left: -19px;
 			display: block;
+			margin: 6.5px auto 0 auto;
 			float: none;
 		}
 	}
+	.list-left{
+		li{
+			display: block !important;
+			a{
+				text-align: left !important;
+			}
+		}
+	}
+	.list-right{
+		li{
+			display: block !important;
+			a{
+				text-align: right !important;
+			}
+		}
+	}
+	.list-center{
+		li{
+			display: block !important;
+			a{
+				text-align: center !important;
+			}
+		}
+	}
+
 }
 @media (min-width: 768px) and (max-width: 991px){
+	body{background: tomato;}
 	.contenedor-ico{
 		display: block;
 	}
@@ -203,6 +231,9 @@ body{
 				width: 100%;
 			}
 		}
+	}
+	.hide-logo{
+		display: none !important;
 	}
 	/*Estilos para el main-menu y sus hijos*/
 	.main-menu{
