--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*variables para icono-menu-center*/
 nav,
 article,
 aside,
@@ -14,17 +15,19 @@ div {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/*Clases para uso del menú*/
-.active {
-  background: #00b588;
-  border-radius: 3px;
+.contenedor-menu {
+  background: #00bf8f;
+  padding: 5px 0;
 }
-.active > a {
-  color: white !important;
-}
-/*Estilos para el contenedor del logo*/
-.contenedor-ico {
+.contenedor-iconos {
   display: inline-block;
+}
+.name-app {
+  display: inline-block;
+  color: #242424;
+  font-size: 2em;
+  font-weight: 700;
+  padding: 2.5px 0;
 }
 .figure-logo {
   display: inline-block;
@@ -35,62 +38,47 @@ div {
 .figure-logo a img {
   width: 100%;
 }
-.ico-menu {
+.icono-menu-movil {
   display: none;
 }
-/*fin*/
-/*Contenedor menú*/
-.contenedor-menu {
-  background: #00bf8f;
-  padding: 5px 0;
-}
-/*Estilos para el main-menu y sus hijos*/
-.main-menu {
+/*Estilos para el box-main-menu y sus hijos*/
+.box-main-menu {
   display: inline-block;
   float: right;
   vertical-align: top;
+  height: 45px;
 }
-.main-menu .menu {
+.box-main-menu .menu {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-.main-menu .menu li {
+.box-main-menu .menu li {
   display: inline-block;
 }
-.main-menu .menu li a {
+.box-main-menu .menu li a {
   border-top: 4px solid transparent;
-  color: #1F1F1F;
+  color: #1f1f1f;
   display: block;
   text-align: center;
   padding: 10px 20px;
+  font-size: 14px;
 }
-.main-menu .menu li a:hover {
+.box-main-menu .menu li a:hover {
   background: #00b588;
-  border-top: 4px solid white;
+  border-top: 4px solid #ffff42;
   color: #ffffff;
 }
-/*fin*/
-/*varios*/
-.presentacion {
-  margin-top: 2em;
+/*fin Estilos para el box-main-menu y sus hijos*/
+.active {
+  background: #00ab80;
+  border-radius: 3px;
 }
-.presentacion h1 {
-  text-align: center;
+.active > a {
+  color: #ffffff !important;
 }
-.presentacion p {
-  font-size: 18px;
-  text-align: center;
-}
-/*mediaqueries*/
 @media (max-width: 767px) {
-  /*Contenedor menú*/
-  .contenedor-menu {
-    background: #00bf8f;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-  .contenedor-ico {
+  .contenedor-iconos {
     display: block;
     height: 45px;
   }
@@ -104,19 +92,20 @@ div {
   .figure-logo a img {
     width: 100%;
   }
-  .ico-menu {
-    background: white;
+  .icono-menu-movil {
+    background: transparent;
     border-radius: 3px;
+    border: 1px solid #606060;
     cursor: pointer;
-    padding: 5px 7px;
-    margin-top: 6.6px;
+    padding: 4px 7px;
+    margin-top: 6.5px;
     display: block;
     float: right;
-    height: 32px;
+    height: 33px;
     width: 38px;
   }
-  /*Estilos para el main-menu y sus hijos*/
-  .main-menu {
+  /*Estilos para el box-main-menu y sus hijos*/
+  .box-main-menu {
     border-top: thin solid #E1E1E1;
     display: none;
     padding-top: 6.5px;
@@ -124,55 +113,62 @@ div {
     margin-left: -15px;
     margin-right: -15px;
     float: none;
+    height: 100%;
   }
-  .main-menu .menu {
-    display: block;
+  .box-main-menu .menu {
     list-style-type: none;
     text-align: center;
     margin-left: 15px;
     margin-right: 15px;
   }
-  .main-menu .menu li {
+  .box-main-menu .menu li {
     margin-top: 3px;
   }
-  .main-menu .menu li a {
+  .box-main-menu .menu li a {
     border-top: 4px solid transparent;
     display: block;
     text-align: center;
     padding: 10px 20px;
   }
-  .main-menu .menu li a:hover {
+  .box-main-menu .menu li a:hover {
     background: #00b588;
-    border-top: 4px solid white;
+    border-top: 4px solid #ffff42;
     color: #ffffff;
   }
   /*fin*/
-  .ico-menu-left {
+  .icono-menu-movil-left {
     display: block;
     height: 45px;
   }
-  .ico-menu-left .figure-logo {
+  .icono-menu-movil-left .figure-logo {
     float: right;
   }
-  .ico-menu-left .ico-menu {
+  .icono-menu-movil-left .name-app {
+    float: right;
+  }
+  .icono-menu-movil-left .icono-menu-movil {
     float: left;
   }
-  .ico-menu-center {
+  .icono-menu-movil-center {
     display: block;
     height: 82px;
     width: 100%;
   }
-  .ico-menu-center .contenedor-logo {
+  .icono-menu-movil-center .contenedor-logo {
     background: transparent;
     display: block;
     width: 100%;
   }
-  .ico-menu-center .contenedor-logo .figure-logo {
+  .icono-menu-movil-center .contenedor-logo .figure-logo {
     display: block;
     float: none;
     margin: 0 auto 5px auto;
   }
-  .ico-menu-center .ico-menu {
+  .icono-menu-movil-center .name-app {
+    display: block;
+    text-align: center;
+  }
+  .icono-menu-movil-center .icono-menu-movil {
     display: block;
     margin: 0 auto;
     float: none;
@@ -195,17 +191,18 @@ div {
   .list-center li a {
     text-align: center !important;
   }
+  /*clases válidas solo cuando los iconos están al centro, usado con javascript*/
   .hide-logo .contenedor-logo {
     display: none;
   }
   .height-menu {
-    height: 42px;
+    height: 45px;
     padding-top: 5px;
     padding-bottom: 5px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .contenedor-ico {
+  .contenedor-iconos {
     display: block;
   }
   .figure-logo {
@@ -217,34 +214,29 @@ div {
   .figure-logo a img {
     width: 100%;
   }
-  .hide-logo {
-    display: none !important;
-  }
-  /*Estilos para el main-menu y sus hijos*/
-  .main-menu {
-    float: none;
-    vertical-align: top;
-  }
-  .main-menu .menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  .name-app {
+    display: block;
     text-align: center;
   }
-  .main-menu .menu li {
+  /*Estilos para el box-main-menu y sus hijos*/
+  .box-main-menu {
+    display: block;
+    float: none;
+    vertical-align: top;
+    height: 100%;
+  }
+  .box-main-menu .menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .box-main-menu .menu li {
     display: inline-block;
     margin-top: 3px;
   }
-  .main-menu .menu li a {
-    border-top: 4px solid transparent;
-    display: block;
-    text-align: center;
-    padding: 10px 20px;
-  }
-  .main-menu .menu li a:hover {
-    background: #00b588;
-    border-top: 4px solid white;
-    color: #ffffff;
-  }
   /*fin*/
+  .hide-logo {
+    display: none !important;
+  }
 }
