--- a/less/estilos.less
+++ b/less/estilos.less
@@ -17,7 +17,7 @@ img{
 }
 
 //Estilos para logo
-.contenedor-iconos{
+.contenedor-ico-nameapp{
 	display: inline-block;
 }
 .name-app{
@@ -86,7 +86,7 @@ img{
 
 @media (max-width: 767px){
 
-	.contenedor-iconos{
+	.contenedor-ico-nameapp{
 		display: block;
 		height: @altura-contenedor-iconos; //45px
 	}
@@ -165,7 +165,7 @@ img{
 		display: block;
 		height: @height-menu;
 		width: 100%;
-		.contenedor-logo-nameapp{
+		.logo-nameapp{
 			background: transparent;
 			display: block;
 			width: 100%;
@@ -211,7 +211,7 @@ img{
 	}
 	/*clases válidas solo cuando los iconos están al centro, usado con javascript*/
 	//se aplicaran cuando el usuario haga scroll
-	.hide-logo .contenedor-logo-nameapp{
+	.hide-logo .logo-nameapp{
 		display: none;
 	}
 	.height-menu{
@@ -222,7 +222,7 @@ img{
 
 }
 @media (min-width: 768px) and (max-width: 991px){
-	.contenedor-iconos{
+	.contenedor-ico-nameapp{
 		display: block;
 	}
 	.figure-logo{
