--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ div {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+body {
+  padding: 0;
+  margin: 0;
+}
 img {
   max-width: 100%;
 }
@@ -66,11 +70,13 @@ img {
   text-align: center;
   padding: 10px 20px;
   font-size: 14px;
+  text-decoration: none;
 }
 .box-main-menu .menu li a:hover {
   background: #00b588;
   border-top: 4px solid #ffff42;
   color: #ffffff;
+  text-decoration: underline;
 }
 /*fin Estilos para el box-main-menu y sus hijos*/
 .active {
