Web Menú Lince v. 1.1
Archivos del menú agregados

--- a/less/variables.less
+++ b/less/variables.less
@@ -16,7 +16,10 @@
 //link
 @color-text-link: #1F1F1F; //color de texto por defecto item del menú
 @fz-link: 14px; // tamaño del texto para los item del menú
-@padding-link: ((@altura-logo / 2) - 12.5) 20px; //padding de los link
+
+//Si no deseas usar Bootstrap cambia el valor - 12.5 por 8.5
+@padding-link: ((@altura-logo / 2) - 12.5 ) 20px; //padding de los link del menú
+
 @size-border-top: 4px; //tamaño borde top cuando cuando se pasa el mouse
 @color-border-top: #FFFF42; //color borde top cuando cuando se pasa el mouse
 @color-text-hover: #fff; //color de texto para hover
